# melo-webapi

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
lib/: BUILD.bazel
lib/include/melo/webapi/: client.h  client_helper.h  device.h  net_monitor.h
lib/src/: client.cc  client_helper.cc  device.cc  net_monitor.cc
lib/utils/: monitor.cc
server/: BUILD.bazel  go.mod  go.sum  main.go
server/internal/device/: BUILD.bazel  database.go  device.go  icon.go  interface_type.go
server/internal/discover_legacy/: BUILD.bazel  discover_legacy.go
server/internal/utils/: BUILD.bazel  utils.go
server/internal/utils/middleware/: BUILD.bazel  middleware.go
tests/: test_legacy.py
tools/: local-db.yml
