"""Melo Web API module."""

module(
    name = "melo-webapi",
    version = "1.0.0",
    compatibility_level = 1,
)

# Build dependencies
bazel_dep(name = "rules_go", version = "0.49.0")

bazel_dep(name = "gazelle", version = "0.37.0", dev_dependency = True)

# Dev dependencies
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "rules_multirun", version = "0.9.0", dev_dependency = True)

# Deployement dependencies
bazel_dep(name = "rules_oci", version = "1.8.0", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.0.1", dev_dependency = True)

# Select Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//server:go.mod")
use_repo(go_deps, "com_github_danielgtaylor_huma_v2", "com_github_go_chi_chi_v5", "com_github_go_sql_driver_mysql", "com_github_sirupsen_logrus")

# OCI image base
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:a7af3ef5d69f6534ba0492cc7d6b8fbcffddcb02511b45becc2fac752f907584",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base")
