"""Melo Web API library."""

alias(
    name = "lib",
    actual = ":melo-webapi",
)

cc_library(
    name = "melo-webapi",
    srcs = glob(["src/**/*.cc"]),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@spdlog",
    ],
)

cc_library(
    name = "melo-webapi_dbg",
    srcs = glob(["src/**/*.cc"]),
    hdrs = glob(["include/**/*.h"]),
    defines = ["SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@spdlog",
    ],
)

# Tools

cc_binary(
    name = "monitor",
    srcs = ["utils/monitor.cc"],
    visibility = ["//visibility:public"],
    deps = [":melo-webapi_dbg"],
)
