"""Melo Web API library."""

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

alias(
    name = "lib",
    actual = ":melo-webapi",
)

cc_library(
    name = "melo-webapi",
    srcs = glob(["src/**/*.cc"]),
    hdrs = glob(["include/**/*.h"]),
    defines = select({
        ":debug": ["SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@spdlog",
    ],
)

# Tools

cc_binary(
    name = "monitor",
    srcs = ["utils/monitor.cc"],
    visibility = ["//visibility:public"],
    deps = [":melo-webapi"],
)
